--- a/面试题/浏览器原理 & 渲染机制.md
+++ b/面试题/浏览器原理 & 渲染机制.md
@@ -64,9 +64,9 @@
 1. **DNS 解析** → 获取服务器 IP。
 2. **TCP 三次握手** → 建立连接（HTTPS 还需 TLS 握手）。
 3. **发送 HTTP 请求**，获取 HTML。
-4. **解析 HTML → DOM 树**。
-5. **解析 CSS → CSSOM 树**。
-6. **合并 DOM + CSSOM → Render Tree**。
+4. **解析 HTML → DOM 树**（文档结构，包含所有节点）。
+5. **解析 CSS → CSSOM 树**（样式树）。
+6. **合并 DOM + CSSOM → Render Tree**（去掉不可见节点，可见元素的渲染结构）。
 7. **Layout（布局计算）** → 位置大小。
 8. **Paint（绘制）** → 像素信息。
 9. **Composite（合成）** → GPU 合成图层。
@@ -126,7 +126,7 @@ DOM 树表示文档结构，Render Tree 表示可见元素的渲染结构。
 ### 6. 如何减少回流与重绘 🔥
 
 **一句话回答**
-合并 DOM 操作、避免逐条修改、用 transform/opacity 代替。
+合并 DOM 操作、`classList` 一次性修改、动画用 transform，透明变化可以使用opacity 代替。
 
 **要点**
 
@@ -150,7 +150,7 @@ DOM 树表示文档结构，Render Tree 表示可见元素的渲染结构。
 ### 7. 什么是同源策略 🔥
 
 **一句话回答**
-同源策略限制不同源之间访问 DOM、Cookie、LocalStorage 等，保障安全。
+同源策略限制不同源之间访问 DOM、Cookie、Storage、indexedDB 等，保障安全，以及AJAX 请求。
 
 **要点**
 
