feat: 原型链的图片分析

--- a/原型链.md
+++ b/原型链.md
@@ -2,7 +2,7 @@
 
 - 构造函数是使用了 new 关键字的函数，用来创建对象，**所有函数都是 Function()的实例**
 - 原型对象是用来存放实例对象的共享属性和方法的一个公共对象，**所有原型对象都是 Object()的实例**
-- 原型链又叫隐式原型链，是由**__proto__**属性串联起来，原型链的尽头是 Object.prototype。**proto**已经废弃了，可以用 Object.getPrototypeOf()
+- 原型链又叫隐式原型链，是由****proto****属性串联起来，原型链的尽头是 Object.prototype。**proto**已经废弃了，可以用 Object.getPrototypeOf()
 
 ---
 
@@ -77,11 +77,10 @@ p1 --> Person.prototype --> Object.prototype --> null
    Person (构造函数)
 ```
 
----
+![image.png](https://p1-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/f2b435c6ed064418969d80abcddb44e6~tplv-k3u1fbpfcp-zoom-in-crop-mark:1512:0:0:0.awebp?)
 
 ✅ 总结：
 
 - **构造函数**用来创建对象。
 - **原型对象**存放共享属性方法。
 - **原型链**通过 `__proto__`（或标准 API）层层向上，最终指向 `Object.prototype`，形成继承关系。
-
